force-app/main/default/objects/vlocity_ins__ProjectItem__c/fields/vlocity_ins__ProjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProjectId__c</fullName>
    <description>Master-detail reference to the parent project.</description>
    <label>Project</label>
    <referenceTo>vlocity_ins__Project__c</referenceTo>
    <relationshipLabel>Project Items</relationshipLabel>
    <relationshipName>ProjectItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>