force-app/main/default/objects/vlocity_ins__ProjectItem__c/fields/vlocity_ins__RootItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__RootItemId__c</fullName>
    <description>The Salesforce Id of the root project item under whose hierarchy this project item belongs.</description>
    <externalId>true</externalId>
    <label>Root Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>